treewide: Migratee to Spring boot version 3.1.x
Reference: https://docs.openrewrite.org/recipes/java/spring/boot3/upgradespringboot_3_1